--- a/src/component/ProjectItem.css
+++ b/src/component/ProjectItem.css
@@ -15,7 +15,7 @@
 
         img {
             min-height: 198px;
-            object-fit: fill;
+            object-fit: cover;
             overflow: hidden;
             transition: 0.5s ease-in-out;
         }
