--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,55 @@
       }
     }
 
+    .more-project-btn {
+
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      gap: 10px;
+
+      img {
+        display: block;
+        width: 100px;
+        animation: arrow 1s infinite;
+      }
+
+
+      >button {
+        border: 1px solid grey;
+        background-color: rgb(32, 32, 32);
+        border-radius: 100vmax;
+        color: whitesmoke;
+        font-family: inherit;
+        width: 150px;
+        height: 50px;
+        display: block;
+        transition: transform 0.3s;
+      }
+
+      >button:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+      }
+    }
+
   }
+}
+
+@keyframes arrow {
+  0% {
+    translate: 0 0;
+  }
+
+  50% {
+    translate: 20px 0;
+  }
+
+  100% {
+    translate: 0 0;
+  }
+
+
 }
 
 
@@ -56,6 +104,38 @@
         z-index: 10;
       }
 
+    }
+
+    .more-project-btn {
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+
+      img {
+        display: block;
+        width: 100px;
+        animation: arrow 1s infinite;
+      }
+
+
+      >button {
+        border: 1px solid grey;
+        background-color: rgb(32, 32, 32);
+        border-radius: 100vmax;
+        color: whitesmoke;
+        font-family: inherit;
+        width: 150px;
+        height: 50px;
+        display: block;
+        transition: transform 0.3s;
+      }
+
+      >button:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+      }
     }
 
   }
